<resources>

    <string name="app_name">海岛地名</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_string1">首页</string>
    <string name="tab_string2">地图</string>
    <string name="tab_string3">统计</string>
    <string name="tab_string4">我</string>
    <string name="tab_string5">资讯</string>
    <string name="mine">我</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="setting_password">2.设置密码</string>
    <string name="input_phone_number">1.填写手机号</string>
    <string name="sms">3.短信验证</string>
    <string name="agree">已同意相关协议，点击“下一步”</string>
    <string name="phone">手机号</string>
    <string name="nickname">昵称</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放更新</string>
    <string name="refreshing">加载中...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="more">加载更多</string>
    <string name="loading">正在加载...</string>
    <string name="no_data">没有更多数据</string>
    <string name="download_text_format" formatted="false">正在下载新版本文件（%d/100）</string>
    <string name="warning_external_storage">您需要SD卡来进行更新</string>
    <string name="about_app">2011年4月12日，国家海洋局联合沿海有关省、自治区海洋厅（局）召开新闻公布会，向社会公布我国第一批开发利用无居民海岛名录 。此次公布的第一批开发利用无居民海岛名录，是在国家海洋局统一组织下，由沿海各省份海洋部门具体负责初选后，报经省级人民政府同意后对外发布。APP提供目前开发利用海岛名录信息查询。</string>
</resources>
