<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/activity_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_20dp"
                android:background="@color/gray3" />

            <!--当前版本-->
            <RelativeLayout
                android:id="@+id/rl_version"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:text="@string/phone"
                    android:textSize="@dimen/fontSize_14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <View
                style="@style/Divider"
                android:layout_marginLeft="@dimen/margin_20dp" />

            <!--意见反馈-->

            <RelativeLayout
                android:id="@+id/rl_suggest"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:text="@string/nickname"
                    android:textSize="@dimen/fontSize_14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <View
                style="@style/Divider"
                android:layout_marginLeft="@dimen/margin_20dp" />

            <RelativeLayout
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:text="@string/sex"
                    android:textSize="@dimen/fontSize_14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <View
                style="@style/Divider"
                android:layout_marginLeft="@dimen/margin_20dp" />

            <RelativeLayout
                android:id="@+id/rl_about"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:text="@string/name"
                    android:textSize="@dimen/fontSize_14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <View
                style="@style/Divider"
                android:layout_marginLeft="@dimen/margin_20dp" />

            <RelativeLayout
                android:id="@+id/rl_remove"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:text="个人签名"
                    android:textSize="@dimen/fontSize_14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <View
                style="@style/Divider"
                android:layout_marginLeft="@dimen/margin_20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/go_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginRight="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:background="@drawable/drawable_button_selector"
            android:gravity="center"
            android:text="退出"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_16sp" />
    </LinearLayout>
</ScrollView>