<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_color"
    android:orientation="vertical">

    <include layout="@layout/activity_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_70dp">

            <TextView
                android:id="@+id/input_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/input_phone_number" />

            <ImageView
                android:id="@+id/arrow_one"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@id/input_phone"
                android:src="@drawable/arrow_login_right" />

            <TextView
                android:id="@+id/setting_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/arrow_one"
                android:text="@string/setting_password" />

            <ImageView
                android:id="@+id/arrow_two"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@id/setting_password"
                android:src="@drawable/arrow_login_right" />

            <TextView
                android:id="@+id/sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/arrow_two"
                android:text="@string/sms"
                android:textColor="@color/theme" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:text="验证码" />

        <toponymsystem.island.com.widget.ClearEditText
            android:id="@+id/code_input"
            android:layout_width="@dimen/width_150dp"
            android:layout_height="@dimen/bar_height"
            android:layout_marginLeft="@dimen/margin_50dp"
            android:layout_toRightOf="@id/tv_code"
            android:background="@null"
            android:hint="请输入验证码"
            android:inputType="number"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/fontSize_14sp" />

        <View
            android:layout_width="@dimen/divider_height"
            android:layout_height="@dimen/width_35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/code_input"
            android:background="@color/deep_gray_color" />

        <TextView
            android:id="@+id/get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:layout_marginRight="@dimen/margin_5dp"
            android:padding="@dimen/padding_5dp"
            android:text="获取验证码"
            android:textColor="@color/theme" />
    </RelativeLayout>

    <TextView
        android:id="@+id/send_code_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="已发送验证码至："
        android:textColor="@color/hint_color" />

    <TextView
        android:id="@+id/go_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:layout_marginLeft="@dimen/margin_30dp"
        android:layout_marginRight="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:background="@drawable/drawable_button_selector"
        android:gravity="center"
        android:text="注册"
        android:textColor="@color/white"
        android:textSize="@dimen/fontSize_16sp" />
</LinearLayout>